# MLOps-Customer-Churn

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  bundle_monitoring.yml  databricks.yml  project_config.yml  pyproject.toml
.github/workflows/: pipeline.yml
data/: README.md
notebooks/feature_engineering/: basic_mlflow_experiment_notebook.py
src/: __init__.py
src/customer_churn/: __init__.py  data_cleaning.py  data_cleaning_spark.py  data_preprocessing.py  data_preprocessing_spark.py  data_validator.py  deployment_validator.py  health_checks.py  secrets_manager.py  utils.py
tests/: test_data_cleaning.py  test_data_preprocessor.py  test_smoke.py
workflows/: deploy_model.py  evaluate_model.py  preprocess.py  refresh_monitor.py  train_model.py
